--- a/HomeBudget.App/Resources/Styles/Styles.xaml
+++ b/HomeBudget.App/Resources/Styles/Styles.xaml
@@ -118,6 +118,7 @@
         <Setter Property="VerticalOptions" Value="FillAndExpand" />
         <Setter Property="Margin" Value="0,5,0,5" />
         <Setter Property="Padding" Value="10,0,0,0" />
+        <Setter Property="MinimumHeightRequest" Value="44" />
         <Setter Property="CornerRadius" Value="10" />
     </Style>
     <Style
@@ -190,9 +191,8 @@
         TargetType="Button">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="FontFamily" Value="RedHatDisplayMedium" />
-        <Setter Property="FontSize" Value="{StaticResource SmallFontSize}" />
+        <Setter Property="FontSize" Value="{StaticResource MediumFontSize}" />
         <Setter Property="TextColor" Value="{StaticResource Gray600}" />
-        <Setter Property="Padding" Value="0" />
     </Style>
 
     <Style
