--- a/HomeBudget.App/Views/MainPageAndroidView.xaml
+++ b/HomeBudget.App/Views/MainPageAndroidView.xaml
@@ -6,153 +6,75 @@
     xmlns:contentViews="clr-namespace:HomeBudget.App.Views.ContentViews"
     xmlns:controls="clr-namespace:HomeBudget.App.Views.ContentViews.UniversalControls"
     xmlns:icons="clr-namespace:HomeBudget.App.Resources.Icons"
+    xmlns:main="clr-namespace:HomeBudget.App.ViewModels.ContentViewModels.Main"
+    xmlns:mainViews="clr-namespace:HomeBudget.App.Views.ContentViews.Main"
     xmlns:viewmodel="clr-namespace:HomeBudget.App.ViewModels"
     x:DataType="viewmodel:MainPageViewModel">
 
-    <Grid BackgroundColor="{StaticResource Gray100}">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="3*" />
-                <RowDefinition Height="7*" />
-            </Grid.RowDefinitions>
+    <ContentPage.Resources>
+        <DataTemplate x:Key="Login">
+            <mainViews:LoginContentView />
+        </DataTemplate>
 
-            <Border
-                Padding="30"
-                BackgroundColor="White"
-                StrokeThickness="0">
-                <Border.StrokeShape>
-                    <RoundRectangle CornerRadius="0,0,30,30" />
-                </Border.StrokeShape>
+        <DataTemplate x:Key="Register">
+            <mainViews:RegisterContentView />
+        </DataTemplate>
 
-                <Grid RowDefinitions="3*,2*,2*">
+        <main:MainCarouselItemTemplateSelector
+            x:Key="MainTemplateSelector"
+            LoginDT="{StaticResource Login}"
+            RegisterDT="{StaticResource Register}" />
+    </ContentPage.Resources>
+
+    <Grid BackgroundColor="{StaticResource Gray100}" RowDefinitions="Auto,*">
+
+        <Border
+            Grid.Row="0"
+            Padding="20,20,20,20"
+            BackgroundColor="White"
+            Stroke="{StaticResource Gray100}"
+            StrokeThickness="1">
+
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="0,0,15,15" />
+            </Border.StrokeShape>
+
+            <Grid>
+                <VerticalStackLayout Spacing="10">
                     <Image
                         Grid.Row="0"
-                        Aspect="AspectFill"
+                        Aspect="AspectFit"
                         HorizontalOptions="Start"
-                        Source="logo.png" />
-                    <VerticalStackLayout Grid.Row="1">
-                        <Label
-                            Style="{StaticResource H1Label}"
-                            Text="Witaj w home budget"
-                            VerticalOptions="Center" />
-                        <Label
-                            Grid.Row="1"
-                            Style="{StaticResource H3Label}"
-                            Text="Zaloguj się do swojego konta"
-                            VerticalOptions="Center" />
-                    </VerticalStackLayout>
-
-
-                    <Frame
-                        Grid.Row="2"
-                        Padding="1"
-                        BackgroundColor="{StaticResource Gray200}">
-                        <Grid ColumnDefinitions="*,*">
-                            <Button
-                                Grid.Column="0"
-                                Margin="0"
-                                BackgroundColor="White"
-                                Shadow="{Shadow Brush=#DCE1EE}"
-                                Style="{StaticResource PrimaryButton}"
-                                Text="Zaloguj"
-                                TextColor="{StaticResource Primary}" />
-                            <Button
-                                Grid.Column="1"
-                                Margin="0"
-                                BackgroundColor="{StaticResource Gray200}"
-                                Command="{Binding GoToRegisterCommand}"
-                                Style="{StaticResource SecondaryButton}"
-                                Text="Rejestruj" />
-                        </Grid>
-
-
-                    </Frame>
-                </Grid>
-
-            </Border>
-
-            <Grid Grid.Row="1" Margin="30">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="2*" />
-                    <RowDefinition Height="2*" />
-                    <RowDefinition Height="2*" />
-                    <RowDefinition Height="2*" />
-                    <RowDefinition Height="2*" />
-                    <RowDefinition Height="2*" />
-                    <RowDefinition Height="2*" />
-                </Grid.RowDefinitions>
-
-                <Frame Grid.Row="0" Style="{StaticResource EntryFrame}">
-                    <Entry
-                        Placeholder="Email"
-                        Style="{StaticResource DarkMediumEntry}"
-                        Text="{Binding Email}" />
-                </Frame>
-                <Frame Grid.Row="1" Style="{StaticResource EntryFrame}">
-                    <Grid ColumnDefinitions="*,Auto">
-                        <Entry
-                            IsPassword="{Binding IsPasswordVisible}"
-                            Placeholder="Hasło"
-                            Style="{StaticResource DarkMediumEntry}"
-                            Text="{Binding Password}" />
-                        <Button
-                            Grid.Column="1"
-                            Style="{StaticResource IconFlexButton}"
-                            Text="{Binding PasswordVisibleIcon}">
-                            <Button.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding TogglePasswordVisibilityCommand}" />
-                            </Button.GestureRecognizers>
-                        </Button>
-                    </Grid>
-                </Frame>
-
-                <Grid
-                    Grid.Row="2"
-                    ColumnDefinitions="Auto,*"
-                    HorizontalOptions="Start">
-                    <Switch
-                        Grid.Column="0"
-                        Margin="15,0,0,0"
-                        IsToggled="{Binding IsRemembered, Mode=TwoWay}"
-                        Scale="2" />
+                        Source="logo.png"
+                        VerticalOptions="Start"
+                        WidthRequest="80" />
                     <Label
-                        Grid.Column="1"
-                        Margin="30,0,0,0"
-                        Style="{StaticResource PrimaryCheckBoxLabel}"
-                        Text="Zapamiętaj mnie"
+                        Style="{StaticResource H1Label}"
+                        Text="Witaj w home budget"
                         VerticalOptions="Center" />
-                </Grid>
-
-                <Button
-                    Grid.Row="3"
-                    Command="{Binding LoginCommand}"
-                    Style="{StaticResource PrimaryButton}"
-                    Text="Zaloguj" />
-                <Grid Grid.Row="4" ColumnDefinitions="*,Auto,*">
-                    <BoxView
-                        Grid.Column="0"
-                        HeightRequest="1"
-                        Color="LightGray" />
                     <Label
-                        Grid.Column="1"
-                        Margin="5,0,5,0"
-                        Style="{StaticResource LoginViewH2Label}"
-                        Text="lub"
+                        Grid.Row="1"
+                        Style="{StaticResource H3Label}"
+                        Text="Zaloguj się do swojego konta"
                         VerticalOptions="Center" />
-                    <BoxView
-                        Grid.Column="2"
-                        HeightRequest="1"
-                        Color="LightGray" />
-                </Grid>
 
-                <Button
-                    Grid.Row="5"
-                    Command="{Binding GoToPasswordReminderCommand}"
-                    Style="{StaticResource TransparentButton}"
-                    Text="Zapomniałem hasła" />
-
+                    <controls:SelectableButtonGroupView BindingContext="{Binding SelectableButtonGroupVM}" />
+                </VerticalStackLayout>
             </Grid>
+        </Border>
+
+        <Grid Grid.Row="1" Margin="10">
+
+            <CarouselView
+                Grid.Row="1"
+                IsSwipeEnabled="False"
+                ItemTemplate="{StaticResource MainTemplateSelector}"
+                ItemsSource="{Binding MainCarouselVMs}"
+                Position="{Binding CarouselPosition, Mode=TwoWay}" />
+
         </Grid>
-        <controls:ActivityIndicatorFullPageContentView BindingContext="{Binding}" />
+
+        <controls:ActivityIndicatorFullPageContentView Grid.RowSpan="2" BindingContext="{Binding}" />
     </Grid>
+
 </ContentPage>
